--- a/css/main.css
+++ b/css/main.css
@@ -1022,8 +1022,8 @@ button.btn--primary:focus,
 input[type="submit"].btn--primary:focus,
 input[type="reset"].btn--primary:focus,
 input[type="button"].btn--primary:focus {
-  background: #514686;
-  border-color: #514686;
+  background: linear-gradient(#734B6D 100%, -19.75%, #42275A 162.51%);;
+  border-color: #42275A;
 }
 
 /* button modifiers
@@ -2940,7 +2940,7 @@ html.no-csstransitions .home-content__main {
   line-height: 54px;
   text-align: center;
   border-radius: 50%;
-  background-color: #5b4f96;
+  background-color: #42275A;
   box-shadow: 0 0 0 15px #ffffff;
   z-index: 500;
   position: absolute;
@@ -3177,7 +3177,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .item-feature__icon {
-  color: #5b4f96;
+  color: #42275A;
   font-size: 4.8rem;
 }
 
@@ -3725,7 +3725,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .s-footer .display-1 {
-  color: #5b4f96;
+  color: #42275A;
 }
 
 .s-footer h4 {
@@ -3764,6 +3764,10 @@ html.no-csstransitions .home-content__main {
   padding: 0;
   position: relative;
 }
+.country_container {
+  width: 100%;
+  background: rgba(255, 255, 255, 0.03);
+}
 
 .footer__subscribe #mc-form {
   width: 100%;
@@ -3779,10 +3783,6 @@ html.no-csstransitions .home-content__main {
   margin-bottom: 2rem;
   border: none;
   border-radius: 4px;
-}
-.footer__subscribe #mc-form input[type="tel"] {
-  background: url(../images/icons/icon-phone.svg) 24px center no-repeat, rgba(255, 255, 255, 0.03);
-  background-size: 32px 24px, auto;
 }
 .footer__subscribe #mc-form input[type="text"] {
   background: url(../images/icons/icon-person.svg) 24px center no-repeat, rgba(255, 255, 255, 0.03);
@@ -3833,15 +3833,14 @@ html.no-csstransitions .home-content__main {
 
 .footer__subscribe #mc-form input[type=submit] {
   color: #ffffff;
-  background: #5b4f96;
-  border-color: #5b4f96;
+  background: linear-gradient(162.51deg, #42275A -19.75%, #734B6D 100%);
+  border: none;
   margin-right: 0;
   padding: 0 20px 0 24px;
   height: 6.8rem;
   line-height: 6.4rem;
   border-radius: 0 4px 4px 0;
   position: absolute;
-  bottom: 4px;
   right: 0;
 }
 
@@ -4061,6 +4060,7 @@ html.no-csstransitions .home-content__main {
     margin-right: 0;
     width: 100%;
     border-radius: 4px;
+    margin-top: 2rem;
   }
 
   .footer__contact {
