--- a/css/main.css
+++ b/css/main.css
@@ -2641,7 +2641,7 @@ html.no-csstransitions .home-content__main {
 .s-about {
   padding-top: 23.2rem;
   padding-bottom: calc((62.4rem/2) + 6.4rem);
-  background-color: #42275A;
+  background-color: #50316B;
   color: rgba(255, 255, 255, 0.8);
   overflow: hidden;
   position: relative;
@@ -2823,7 +2823,30 @@ html.no-csstransitions .home-content__main {
   background-size: 24px 27px;
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
+  box-shadow: 0 0 0 0 rgb(66, 39, 90, 1);
+	transform: scale(1);
+	animation: pulse 1.6s infinite;
 }
+
+/* Pulse animation on play button */
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgb(66, 39, 90, 0.8);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+	}
+}
+
+/* End of pulse animation */ 
 
 .btn-video:hover .video-icon {
   background-color: #5b4f96;
@@ -2940,7 +2963,7 @@ html.no-csstransitions .home-content__main {
   line-height: 54px;
   text-align: center;
   border-radius: 50%;
-  background-color: #42275A;
+  background-color: #50316B;
   box-shadow: 0 0 0 15px #ffffff;
   z-index: 500;
   position: absolute;
@@ -3177,7 +3200,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .item-feature__icon {
-  color: #42275A;
+  color: #50316B;
   font-size: 4.8rem;
 }
 
@@ -3301,7 +3324,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .s-footer .display-1 {
-  color: #42275A;
+  color: #50316B;
 }
 
 .s-footer h4 {
@@ -3721,6 +3744,9 @@ html.no-csstransitions .home-content__main {
 }
 
 @media only screen and (max-width:400px) {
+  .spin .lds-dual-ring {
+    right: 20%;
+  }
   .ss-copyright span {
     font-size: 16px;
   }
